Responsive readability fix in partido legenda

--- a/src/Components/Graphic/Graphic.css
+++ b/src/Components/Graphic/Graphic.css
@@ -156,6 +156,12 @@
   font-size: .85em;
 }
 
+@media only screen and (max-width: 500px) {
+  .list {
+    column-count: 2;
+  }
+}
+
 .item {
   display: flex;
   align-items: center;
